modified public/index.html with sendMessage function for button click event. modified server.js and public/script.js with textContent and broadcasting new user

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     ></div>
     <input id="user" placeholder="Your name" />
     <input id="text" placeholder="Message" />
-    <button onclick="">Send</button>
+    <button onclick="sendMessage()">Send</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
