modified public/index.html with a room input. modified server.js and public/script.js with a chat room messaging

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,15 @@
   </head>
   <body>
     <h1>Chat App</h1>
+    <h2 id="room"></h2>
     <div
       id="chat-box"
       style="border: 1px solid #ccc; height: 300px; overflow-y: auto"
     ></div>
+    <div>
+      <input id="room-name" type="text" placeholder="Enter your room" />
+      <button onClick="joinRoom()">Join a room</button>
+    </div>
     <input id="user" placeholder="Your name" />
     <input id="text" placeholder="Message" />
     <button onclick="sendMessage()">Send</button>
